fix(folio): 更新静态版本号使图片修复生效，移除粗暴的 overflow-x:hidden

--- a/resource/themes/site/folio/static/css/style.css
+++ b/resource/themes/site/folio/static/css/style.css
@@ -57,8 +57,6 @@ html.dark {
 
 html {
   scroll-behavior: smooth;
-  max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
